--- a/gridnbuttons.css
+++ b/gridnbuttons.css
@@ -1,76 +1,65 @@
-.block-base {
-	float: left;	
-}
-.block-button-vertical{
-	width: 52px;
-	min-width: 52px;
-	min-height: 50px;
+.myCompo{
 	position: relative;
 }
 
-.block-button-horizontal{
-	height: 52px;
-	min-width: 50px;
-	min-height: 50px;
-	width: 100%;
-	position: relative;
-}
-
-.myTable {
+.myCompo__table {
 	border: 1px solid rgb(72,170,230);
+	margin: 50px;
+	display: inline-block;	
 }
 
-.mycell {
+.myCompo__cell {
 	background: rgb(72,170,230);
 	border: none;
 	width: 49px;
-	height: 50px;	
+	height: 50px;
+	margin: 0px;	
 	text-align: center; 
 	vertical-align: middle;			
 }		
 
-.button {
+.myCompo__btn {
 	border: none;
 	width: 50px;
 	height: 50px;	
 	font-size: 130%;
 	color: white;
-	float: left;	
+	position: absolute;
 }
 
-.button-fade {
+.myCompo__btn-fade {
 	opacity: 1;
-	transition: all 2.0s ease;
+	transition: opacity 2.0s ease;
 	cursor: pointer;
 }
 
-.button-fade:hover {
+.myCompo__btn-fade:hover {
 	opacity: 0.5;
 }
 
-.button-add{
-	margin: 2px 0px 0px 2px;
+.myCompo__btn-add{
 	background: rgb(243,165,0);	
 }
 
-.button-add-col {
+.myCompo__btn-add-col {
 	margin-top: 3px;
+	margin-left: 2px;
 }
 
-.button-add-row {
-	margin-left: 53px;
+.myCompo__btn-add-row {
+	margin-top: 2px;
+	margin-left: 3px;
 }
 
-.button-remove {
+.myCompo__btn-remove {
 	background: rgb(178,0,0);
-	position: absolute;
 }		
 
-.button-remove-col {
-	margin-bottom: 2px;
-	margin-left: 53px;
+.myCompo__btn-remove-col {
+	margin-top: -2px;
+	margin-left: 1px;
 }		
 
-.button-remove-row {
-	margin-right: 2px;
+.myCompo__btn-remove-row {
+	margin-left: -2px;
 }		
