--- a/gridnbuttons.css
+++ b/gridnbuttons.css
@@ -1,11 +1,11 @@
 .myCompo{
 	position: relative;
+	margin: 50px;
+	display: inline-block;
 }
 
 .myCompo__table {
 	border: 1px solid rgb(72,170,230);
-	margin: 50px;
-	display: inline-block;	
 }
 
 .myCompo__cell {
@@ -13,7 +13,7 @@
 	border: none;
 	width: 49px;
 	height: 50px;
-	margin: 0px;	
+	margin: 0;
 	text-align: center; 
 	vertical-align: middle;			
 }		
@@ -44,11 +44,14 @@
 .myCompo__btn-add-col {
 	margin-top: 3px;
 	margin-left: 2px;
+	left: 100%;
+	top: 0;
 }
 
 .myCompo__btn-add-row {
 	margin-top: 2px;
 	margin-left: 3px;
+	top: 100%;
 }
 
 .myCompo__btn-remove {
@@ -56,10 +59,10 @@
 }		
 
 .myCompo__btn-remove-col {
-	margin-top: -2px;
+	margin-top: -52px;
 	margin-left: 1px;
 }		
 
 .myCompo__btn-remove-row {
-	margin-left: -2px;
+	margin-left: -52px;
 }		
